--- a/flask/templates/crear_orden.html
+++ b/flask/templates/crear_orden.html
@@ -8,26 +8,32 @@
 <body>
     <h1>Crear Orden</h1>
     
-    <form action="/crear_orden" method="POST">
-        <label for="platillo">Platillo:</label>
-        <select id="platillo" name="platillo" required onchange="mostrarPrecio()">
-            <option value="Coctel de camarón" data-precio="150">Coctel de camarón</option>
-            <option value="Filete de pescado" data-precio="180">Filete de pescado</option>
-            <option value="Ostiones" data-precio="160">Ostiones</option>
-            <option value="Vuelve a la vida" data-precio="170">Vuelve a la vida</option>
-            <option value="Ceviche" data-precio="140">Ceviche</option>
-            <option value="Refresco" data-precio="50">Refresco</option>
-            <option value="Agua de sabor" data-precio="30">Agua de sabor</option>
-        </select><br><br>
+    <form action="/crear_orden" method="POST" id="ordenForm">
+        <div id="platillosContainer">
+            <div class="platilloOption">
+                <label for="platillo">Platillos:</label><br>
+                <select name="platillos[]" class="platillo" required onchange="calcularPrecio()">
+                    <option value="Coctel de camarón" data-precio="150">Coctel de camarón</option>
+                    <option value="Filete de pescado" data-precio="180">Filete de pescado</option>
+                    <option value="Ostiones" data-precio="160">Ostiones</option>
+                    <option value="Vuelve a la vida" data-precio="170">Vuelve a la vida</option>
+                    <option value="Ceviche" data-precio="140">Ceviche</option>
+                    <option value="Refresco" data-precio="50">Refresco</option>
+                    <option value="Agua de sabor" data-precio="30">Agua de sabor</option>
+                </select><br><br>
+            </div>
+        </div>
+
+        <button type="button" onclick="agregarPlatillo()">Agregar Platillo</button><br><br>
 
         <label for="cantidad">Cantidad:</label>
-        <input type="number" id="cantidad" name="cantidad" required><br><br>
+        <input type="number" name="cantidad" required><br><br>
 
         <label for="nota_especial">Nota Especial:</label>
-        <input type="text" id="nota_especial" name="nota_especial"><br><br>
+        <input type="text" name="nota_especial"><br><br>
 
-        <label for="precio">Precio:</label>
-        <input type="text" id="precio" name="precio" readonly><br><br> <!-- Campo de solo lectura para mostrar el precio -->
+        <label for="precio">Precio Total:</label>
+        <input type="text" id="precio" name="precio" readonly><br><br> <!-- Campo de solo lectura para mostrar el precio total -->
 
         <button type="submit">Agregar Orden</button>
     </form>
@@ -36,12 +42,33 @@
     <a href="{{ url_for('menu_mesero') }}">Volver al menú del mesero</a>
 
     <script>
-        function mostrarPrecio() {
-            var select = document.getElementById("platillo");
-            var precioInput = document.getElementById("precio");
-            var selectedOption = select.options[select.selectedIndex];
-            var precio = selectedOption.getAttribute("data-precio");
-            precioInput.value = precio;
+        function agregarPlatillo() {
+            var platillosContainer = document.getElementById("platillosContainer");
+            var platilloOption = document.createElement("div");
+            platilloOption.classList.add("platilloOption");
+            platilloOption.innerHTML = `
+                <label for="platillo">Platillos:</label><br>
+                <select name="platillos[]" class="platillo" required onchange="calcularPrecio()">
+                    <option value="Coctel de camarón" data-precio="150">Coctel de camarón</option>
+                    <option value="Filete de pescado" data-precio="180">Filete de pescado</option>
+                    <option value="Ostiones" data-precio="160">Ostiones</option>
+                    <option value="Vuelve a la vida" data-precio="170">Vuelve a la vida</option>
+                    <option value="Ceviche" data-precio="140">Ceviche</option>
+                    <option value="Refresco" data-precio="50">Refresco</option>
+                    <option value="Agua de sabor" data-precio="30">Agua de sabor</option>
+                </select><br><br>`;
+            platillosContainer.appendChild(platilloOption);
+        }
+
+        function calcularPrecio() {
+            var selectPlatillos = document.getElementsByClassName("platillo");
+            var precioTotal = 0;
+            for (var i = 0; i < selectPlatillos.length; i++) {
+                var selectedOption = selectPlatillos[i].options[selectPlatillos[i].selectedIndex];
+                var precio = parseInt(selectedOption.getAttribute("data-precio"));
+                precioTotal += precio;
+            }
+            document.getElementById("precio").value = precioTotal;
         }
     </script>
 </body>
